--- a/.github/workflows/publish-aws.yaml
+++ b/.github/workflows/publish-aws.yaml
@@ -8,14 +8,20 @@ on:
       - "packer/aws/**"
       - "packer/scripts/**"
       - ".github/workflows/publish-aws.yaml"
+  schedule:
+    - cron: '0 6 1 * *' # Runs monthly at midnight MST
 
 permissions:
   id-token: write
   contents: read
 
 jobs:
-  publish-ubuntu:
+  publish:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        base: ["ubuntu", "rhel"]
+        aws_env: ["commercial"]
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -27,20 +33,21 @@ jobs:
           aws-region: us-west-2
           # 21600 seconds == 6 hours
           role-duration-seconds: 21600
-      - name: Publish Ubuntu AMI
-        run: make publish-ami-ubuntu
-  publish-rhel:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          role-to-assume: ${{ secrets.AWS_COMMERCIAL_ORG_ROLE_TO_ASSUME }}
-          role-session-name: ${{ github.job || github.event.client_payload.pull_request.head.sha || github.sha }}
-          aws-region: us-west-2
-          # 21600 seconds == 6 hours
-          role-duration-seconds: 21600
-      - name: Publish RHEL AMI
-        run: make publish-ami-rhel
+      - name: Setup UDS
+        if: always()
+        uses: defenseunicorns/uds-common/.github/actions/setup@v0.4.0
+      - name: Publish ${{ matrix.base }} AMI
+        run: uds run --no-progress publish-ami-${{ matrix.base }}
+      - name: Test ${{ matrix.base }} AMI
+        shell: bash -e -o pipefail {0}
+        env:
+          KUBECONFIG: "/home/runner/.kube/rke2-config"
+        run: uds run --no-progress test-cluster --set SHA=${{ github.sha }} --set DISTRO=${{ matrix.base }}
+      - name: Teardown test infrastructure
+        shell: bash -e -o pipefail {0}
+        if: always()
+        run: uds run --no-progress teardown-infra --set DISTRO=${{ matrix.base }}
+      - name: Cleanup ${{ matrix.base }} AMI on failure
+        shell: bash -e -o pipefail {0}
+        if: failure()
+        run: uds run --no-progress cleanup-ami
